wangm1 - fix error message background color overlap issue

--- a/src/client/src/scss/style.scss
+++ b/src/client/src/scss/style.scss
@@ -45,7 +45,7 @@
 // error message
 .bg-danger{
   color: #e55353!important;
-  background-color: #ffffff!important;
+  background-color: transparent!important;
 }
 
 // tool bar
